@@ -8,6 +8,7 @@ modules load
 - The construction_max_ap module will not suggest more ap than the remaining for
 each construction
 - Fix the configuration panel help tooltip under Safari
+- Fix DuskDawn sync support
 
 v0.1.1
 - Re-enable Safari support
